added a list view

--- a/Web.config
+++ b/Web.config
@@ -47,4 +47,9 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+<connectionStrings>
+  <add name="DBCS"
+       connectionString="server=.; database=CRUD-MVC; integrated security=SSPI"
+        providerName="System.Data.SqlClient"/>
+</connectionStrings>
 </configuration>
