--- a/CRUD-mvc.csproj
+++ b/CRUD-mvc.csproj
@@ -102,6 +102,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Images\crud.jpg" />
+    <Content Include="Images\crud1.jpg" />
+    <Content Include="Images\crud2.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
